Fix the video player styles on mobile

--- a/src/blocks/interactive/video-player/style.css
+++ b/src/blocks/interactive/video-player/style.css
@@ -4,6 +4,13 @@
 	right: 10px;
 }
 
+@media screen and (max-width: 600px) {
+	.wpmovies-video-player {
+		bottom: 0;
+		right: 0;
+	}
+}
+
 .wpmovies-video-wrapper {
 	position: relative;
 }
@@ -33,6 +40,7 @@
 }
 
 .wpmovies-video-wrapper iframe { 
+	display: block;
 	border: none;
 	max-width: 100vw;
 }
